@@ -1,6 +1,7 @@
 1.5.6 (in development)
 ------------------------------------------------------------------------
 - Fix: Fixed behavior of calendar when moving to next/previous month when current day is in the range of 29-31.
+- Fix: [#334] Improving performance of overall balance calculation and fixing balance target date after month change
 - Enhancement: [#328] Swap position for overall and month balance on day view
 
 Who built 1.5.6:
